# ChangeLog for dev-java/sun-jdk
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jdk/ChangeLog,v 1.183 2007/01/23 10:35:39 beandog Exp $

  23 Jan 2007; Steve Dibb <beandog@gentoo.org> sun-jdk-1.5.0.10.ebuild:
  amd64 stable, security bug 162511

  16 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
  sun-jdk-1.5.0.10.ebuild:
  stable x86, bug #162363

  12 Jan 2007; Vlastimil Babka <caster@gentoo.org> sun-jdk-1.6.0-r1.ebuild:
  Make libstdc++ dependency x86-only - amd64 version doesn't contain
  libdeploy.so, the only file linking to it. Bug #161536.

  11 Jan 2007; Petteri Räty <betelgeuse@gentoo.org>
  -sun-jdk-1.5.0.09-r1.ebuild, -sun-jdk-1.6.0.ebuild:
  Removed unused versions.

  11 Jan 2007; Petteri Räty <betelgeuse@gentoo.org>
  sun-jdk-1.6.0-r1.ebuild:
  Added dependency on virtual/libstdc++-3.3. Fixes bug #161536.

  10 Jan 2007; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.4.2.12-r2.ebuild, sun-jdk-1.4.2.13.ebuild,
  -sun-jdk-1.5.0.08.ebuild:
  Remove versions vulnerable to bug #158659. Remove amd64 keyword from
  1.4.2.13 which was added by mistake.

  09 Jan 2007; <malc@gentoo.org> sun-jdk-1.4.2.13.ebuild,
  sun-jdk-1.5.0.09.ebuild:
  Stable on amd64 wrt bug #158659

  05 Jan 2007; Vlastimil Babka <caster@gentoo.org> sun-jdk-1.5.0.08.ebuild,
  sun-jdk-1.5.0.09.ebuild, sun-jdk-1.5.0.09-r1.ebuild:
  Convert einfo to elog.

  23 Dec 2006; Andrej Kacian <ticho@gentoo.org> sun-jdk-1.4.2.13.ebuild:
  Stable on x86, bug #158659.

  23 Dec 2006; Andrej Kacian <ticho@gentoo.org> sun-jdk-1.5.0.09.ebuild:
  Stable on x86, bug #158659.

  17 Dec 2006; Petteri Räty <betelgeuse@gentoo.org>
  sun-jdk-1.6.0-r1.ebuild:
  Change the desktop entry to be more similar to earlier slots.

*sun-jdk-1.6.0-r1 (16 Dec 2006)

  16 Dec 2006; Vlastimil Babka <caster@gentoo.org> +sun-jdk-1.6.0-r1.ebuild:
  Fix the control panel desktop menuitem wrt bug #158243 by nunogt
  <nunogt@gmail.com>.
