@@ -16,8 +16,6 @@ RMD160 cac1306ba6dd05dcf74fb2e536bf40bd3f03bee1 files/sun-jdk-1.6.env 925
 SHA256 8fd2d12405a41b923b3c64d56b9e42a89d2479323fd78703f2b065fb0ee7ec2b files/sun-jdk-1.6.env 925
 DIST j2sdk-1_4_2_13-linux-i586.bin 36361814 RMD160 cefb731ae6740f36a17242aa79b36d79dda2e102 SHA1 12c679cfa2e212bfa90ae6ef6ad6c477e427bbba SHA256 f5dd8045fe791bd5c52bddf33a1cf65968ee03981e0663f75cd97a942daa24e2
 DIST jce_policy-1_4_2.zip 12195 RMD160 323340fa8a96f315a35b0ebc918731e6fe56c370 SHA1 ea17b649ebcaaf4246e9dd28dbc77926176c64ee SHA256 7bf6d683602686321affc0071ad2fc3890c19cf5bb5cc16a963052e17588c097
-DIST jdk-1_5_0_09-dlj-linux-amd64.bin 43863154 RMD160 c7f4310ff6714d5dd33c10398c6615689f5523ff SHA1 b3cd93b445ce68b8d4b88c4afa9a177473adf3f7 SHA256 3f7f21671ebcb9c849b02d668d85cf6f161870c45f5bf82f5e3fed2a026f7f35
-DIST jdk-1_5_0_09-dlj-linux-i586.bin 49504315 RMD160 8e4bc83d553bd0e92607bd2e03451ec879d5928e SHA1 36a065b72af226804ff0b64b9c40859c7a879b6f SHA256 3318644bdcd1a1de4ea122b03a4607de16f30603e7f6c291c33575cbbc254f85
 DIST jdk-1_5_0_10-dlj-linux-amd64.bin 43906073 RMD160 2d13d637b6d7351410f9e18d581206a05091effe SHA1 b0c4440f7059b2d477a437e5c58f135820e86326 SHA256 5bbac3fb78db48f7f996e412d45229db3a0b759886f360504cca61c93d4b5f61
 DIST jdk-1_5_0_10-dlj-linux-i586.bin 49553457 RMD160 8aa7b53064831d800b8aeae67ffd3f5e4e2e3155 SHA1 fc4883d6da60940cbe4b6c2575478cead26313ff SHA256 e4300d88ae630f02132a4ce23afbdc40f994de91b37d4b64cb1da0b58df678fa
 DIST jdk-6-dlj-linux-amd64.bin 56347832 RMD160 b4d12bf55ea6baa465c227cff2d314d26de4876e SHA1 d51a60c80ac1a8173c53b9a389377b2774a50e92 SHA256 f1f35d331809487bb922bbd3ca46de4abc3e45c482f94127f4ac8f3c8b3321c3
@@ -26,10 +24,6 @@ EBUILD sun-jdk-1.4.2.13.ebuild 6310 RMD160 c05da39110b45b95820b4e47575f672f29c1f
 MD5 f40a87fe0d39910fa54dfa7bf7ddaa31 sun-jdk-1.4.2.13.ebuild 6310
 RMD160 c05da39110b45b95820b4e47575f672f29c1f3db sun-jdk-1.4.2.13.ebuild 6310
 SHA256 7ff87aa6eaec9342d1a690e75a3ef4c94f2bf6b6a1f0265fb2e3b9bd9d2be47d sun-jdk-1.4.2.13.ebuild 6310
-EBUILD sun-jdk-1.5.0.09.ebuild 5108 RMD160 854cc1ff1f98e670d0661938f22b3c314760ed45 SHA1 fc83b49fd9c383cf53afce7420941f2901d894f8 SHA256 95b452e0c8d00f1ce66f5da4c7a021810bbbdaa2314baac06ea0315a5211f4a1
-MD5 3bc4f287898f9562f1e49dda55aca391 sun-jdk-1.5.0.09.ebuild 5108
-RMD160 854cc1ff1f98e670d0661938f22b3c314760ed45 sun-jdk-1.5.0.09.ebuild 5108
-SHA256 95b452e0c8d00f1ce66f5da4c7a021810bbbdaa2314baac06ea0315a5211f4a1 sun-jdk-1.5.0.09.ebuild 5108
 EBUILD sun-jdk-1.5.0.10.ebuild 4604 RMD160 b128a32bf2994ee5a3c81b7c8fb00861f7e1ba49 SHA1 58cb625a885b81d594031ec75fc8de898f13c986 SHA256 daaf95772de1f2e78e891fc34a2eb8141ab3db24ea66f53232c70ca32021a0d8
 MD5 ecc67efc4733391bf1f30a63a9cb40c4 sun-jdk-1.5.0.10.ebuild 4604
 RMD160 b128a32bf2994ee5a3c81b7c8fb00861f7e1ba49 sun-jdk-1.5.0.10.ebuild 4604
@@ -38,10 +32,10 @@ EBUILD sun-jdk-1.6.0-r1.ebuild 4829 RMD160 c5a112df1b4a01f520cf0220da854cdf8caeb
 MD5 e4769c71f1d5c1f4f5fdd55fca98b14a sun-jdk-1.6.0-r1.ebuild 4829
 RMD160 c5a112df1b4a01f520cf0220da854cdf8caebb9f sun-jdk-1.6.0-r1.ebuild 4829
 SHA256 224304e8e2d000da71bc5c411a50e659b18c988285fcc476ac73a4bd6439c184 sun-jdk-1.6.0-r1.ebuild 4829
-MISC ChangeLog 36197 RMD160 f1e4ffa2967874da915ec09afdad2cfa6f9dffee SHA1 edc15c0be5e031549e56c5bc595868d1755eb16e SHA256 dfb0c9841e819bbb08b9be9ac609a593b5c005367128905e2fb0082941fb6661
-MD5 0ec091bef1ddf9210afdc3220a4ed133 ChangeLog 36197
-RMD160 f1e4ffa2967874da915ec09afdad2cfa6f9dffee ChangeLog 36197
-SHA256 dfb0c9841e819bbb08b9be9ac609a593b5c005367128905e2fb0082941fb6661 ChangeLog 36197
+MISC ChangeLog 36303 RMD160 d0bb69e48234223364a1b2c31e3347cd5c8e5d8b SHA1 64a783ad7483d31ef7599f206e1cc41788edae69 SHA256 1a615ec4b0e17950f28a29897b707ed55141b34960016cd7723dcffa68664055
+MD5 12af73e3fe9741de9110cadd96689c16 ChangeLog 36303
+RMD160 d0bb69e48234223364a1b2c31e3347cd5c8e5d8b ChangeLog 36303
+SHA256 1a615ec4b0e17950f28a29897b707ed55141b34960016cd7723dcffa68664055 ChangeLog 36303
 MISC metadata.xml 237 RMD160 e2fa73e8b206c77bc262fd54691289bf05696668 SHA1 47fb9d11272aa2245df406c2156c2482e166a1c3 SHA256 3e53f0c8fb262a6751adb4c188e045e0be6de8739c02ec1af079cba5512e696d
 MD5 2f36c2b94fc9625e5c96d8e558f6ffba metadata.xml 237
 RMD160 e2fa73e8b206c77bc262fd54691289bf05696668 metadata.xml 237
@@ -49,9 +43,6 @@ SHA256 3e53f0c8fb262a6751adb4c188e045e0be6de8739c02ec1af079cba5512e696d metadata
 MD5 4551e92262ffc2bc93ba3941a5f49f30 files/digest-sun-jdk-1.4.2.13 512
 RMD160 6c0a27d829f9b9b868feedd086b0929f015e48a2 files/digest-sun-jdk-1.4.2.13 512
 SHA256 c4db2c43fa08b705c1e9ba316c8cecbcd2d3a7be5d3014cf4bf02e53b214b155 files/digest-sun-jdk-1.4.2.13 512
-MD5 8409e421272b316b007ee383c1d8508b files/digest-sun-jdk-1.5.0.09 563
-RMD160 93a25e28b116cacea4f5295169e9bb091b46575b files/digest-sun-jdk-1.5.0.09 563
-SHA256 659534b6f9466273b0a3523c862d3272fe23191edcec6bb3044b536c9d9a8d4c files/digest-sun-jdk-1.5.0.09 563
 MD5 bfc73dd88d30c26b64d0590cb52d7547 files/digest-sun-jdk-1.5.0.10 563
 RMD160 ce0632d08fdd27b76bd6e2de244a0516555aeef0 files/digest-sun-jdk-1.5.0.10 563
 SHA256 f1f582a1bfca18c6375dc35e75bd199066d2361ffbf7e577a592afb4b351e34d files/digest-sun-jdk-1.5.0.10 563
