@@ -1,6 +1,0 @@
-MD5 a210623300238ebb230d47c774c25779 jdk-1_5_0_09-dlj-linux-amd64.bin 43863154
-RMD160 c7f4310ff6714d5dd33c10398c6615689f5523ff jdk-1_5_0_09-dlj-linux-amd64.bin 43863154
-SHA256 3f7f21671ebcb9c849b02d668d85cf6f161870c45f5bf82f5e3fed2a026f7f35 jdk-1_5_0_09-dlj-linux-amd64.bin 43863154
-MD5 b937aef01669744686e84ac5f0cc3d97 jdk-1_5_0_09-dlj-linux-i586.bin 49504315
-RMD160 8e4bc83d553bd0e92607bd2e03451ec879d5928e jdk-1_5_0_09-dlj-linux-i586.bin 49504315
-SHA256 3318644bdcd1a1de4ea122b03a4607de16f30603e7f6c291c33575cbbc254f85 jdk-1_5_0_09-dlj-linux-i586.bin 49504315
