@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/sun-jdk
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jdk/ChangeLog,v 1.183 2007/01/23 10:35:39 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/sun-jdk/ChangeLog,v 1.184 2007/01/23 11:22:56 caster Exp $
+
+  23 Jan 2007; Vlastimil Babka <caster@gentoo.org> -sun-jdk-1.5.0.09.ebuild:
+  Remove vulnerable version.
 
   23 Jan 2007; Steve Dibb <beandog@gentoo.org> sun-jdk-1.5.0.10.ebuild:
   amd64 stable, security bug 162511
